add curd api and access to mongodb finish setting up local machine connection to mongodb
